--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.6",
+    "react-multi-carousel": "^2.8.3",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-katex": "^6.0.2",
     "rehype-raw": "^6.1.1",
